[project]
name = "sigma"
version = "0.2.0"
description = "Automated signup + API key extraction"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agentmail>=0.2.22",
    "browser-use>=0.12.0",
    "faker>=20.0.0",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "langchain-openai>=0.3.0",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.34.0",
]
